# ChangeLog for dev-util/catalyst
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.249 2012/09/25 05:59:37 jmbsvicetto Exp $

*catalyst-3.9999 (25 Sep 2012)

  25 Sep 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +catalyst-3.9999.ebuild, catalyst-2.9999.ebuild, catalyst-9999.ebuild:
  [dev-util/catalyst] Update live ebuilds to follow master, catalyst_2 and
  catalyst_3 branches.

*catalyst-2.0.11 (09 Sep 2012)

  09 Sep 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +catalyst-2.0.11.ebuild:
  Version bump to catalyst-2.0.11.
  This version moves make.conf and make.profile to /etc/portage.
  Set the profile using eselect instead of manually.
  Add support to update the seed stage3 when building the stage1.
  Update arch config. Add x32 abi config.

  29 Aug 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  catalyst-9999.ebuild:
  [dev-util/catalyst-9999] Update ebuild now that 9999 (master) = catalyst_2
  branch. Prepare work for creating a catalyst-3.9999 to 
  follow the catalyst_3 branch.

*catalyst-2.0.10.1 (27 Jul 2012)

  27 Jul 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +catalyst-2.0.10.1.ebuild:
  [dev-util/catalyst] Bump catalyst to the 2.0.10.1 revision.
  This revision includes all updates committed to the repo since the 2.0.8.1
  release: move make.conf and make.profile to /etc/portage (patches by Jeremy
  Olexa <darkside>),
  add catalyst-spec man page (patches by W. Trevor King <wking@drexel.edu>) and
  update livecd-stage1 target so it rebuilds packages with new use flags.

*catalyst-2.0.8.1-r2 (08 Jul 2012)

  08 Jul 2012; Raúl Porcel <armin76@gentoo.org>
  +files/2.0.8.1-arm-softfp.patch, +catalyst-2.0.8.1-r2.ebuild:
  2.0.9 can't be released yet, so i'm forced to add patches here

*catalyst-2.0.8.1-r1 (15 May 2012)

  15 May 2012; Raúl Porcel <armin76@gentoo.org> -catalyst-2.0.8.1.ebuild,