@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/catalyst
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.249 2012/09/25 05:59:37 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.250 2012/09/25 06:12:02 jmbsvicetto Exp $
+
+  25 Sep 2012; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  catalyst-2.0.11.ebuild, catalyst-2.9999.ebuild, catalyst-3.9999.ebuild,
+  catalyst-9999.ebuild:
+  [dev-util/catalyst] Mark 2.0.11 stable. Add note about catalyst_2 branch and
+  sync live / 2.0.11 ebuilds.
 
 *catalyst-3.9999 (25 Sep 2012)
 
